force-app/main/default/objects/CertificateTemplate__c/CertificateTemplate__c.object-meta.xml
<CustomObject>
    <label>Certificate Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certificate Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>