force-app/main/default/objects/CertificateTemplate__c/fields/Background_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Background_Image_URL__c</fullName>
    <inlineHelpText>URL to background image for certificate</inlineHelpText>
    <label>Background Image URL</label>
    <type>Url</type>
</CustomField>