force-app/main/default/objects/CertificateTemplate__c/fields/Certificate_Body_HTML__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Body_HTML__c</fullName>
    <inlineHelpText>HTML template with merge tokens for certificate content</inlineHelpText>
    <label>Certificate Body HTML</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>