force-app/main/default/objects/CertificateTemplate__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Optional - associate template with specific course</inlineHelpText>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Certificate Templates</relationshipLabel>
    <relationshipName>Certificate_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>