force-app/main/default/objects/CertificateTemplate__c/fields/Include_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Include_Completion_Date__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Include Completion Date</label>
    <type>Checkbox</type>
</CustomField>