force-app/main/default/objects/CertificateTemplate__c/fields/Include_Score__c.field-meta.xml
<CustomField>
    <fullName>Include_Score__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Score</label>
    <type>Checkbox</type>
</CustomField>