force-app/main/default/objects/CertificateTemplate__c/fields/Include_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Include_User_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include User Email</label>
    <type>Checkbox</type>
</CustomField>