force-app/main/default/objects/CertificateTemplate__c/fields/Signature_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Signature_Image_URL__c</fullName>
    <inlineHelpText>URL to signature image for certificate</inlineHelpText>
    <label>Signature Image URL</label>
    <type>Url</type>
</CustomField>