force-app/main/default/objects/CertificateTemplate__c/fields/Template_Type__c.field-meta.xml
<CustomField>
    <fullName>Template_Type__c</fullName>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CourseCompletion</fullName>
                <label>Course Completion</label>
            </value>
            <value>
                <fullName>ProgramCompletion</fullName>
                <label>Program Completion</label>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>